fix extended config

--- a/extended_config.d/start_devel.cfg
+++ b/extended_config.d/start_devel.cfg
@@ -3,6 +3,27 @@
 extends =
     extended_config.d/devel.cfg
 
+[resetownership]
+recipe = plone.recipe.command
+command =
+    echo 'reset ownership of src and eggs (useful to compile .mo)'
+    chown -R ${buildout:effective-user}:${buildout:effective-user} '${buildout:directory}/src'
+    chown -R ${buildout:effective-user}:${buildout:effective-user} '${buildout:eggs-directory}'
+update-command = ${resetownership:command}
+
+
+##############
+# WARNING !!!! 
+##############
 #
-# WARNING !!!! to copy to the buildout folder
+# copy this file to the instance folder as buildout.cfg
+#  
+
+###############
+# CONFIGURATION
+###############
+#
+# Modify the buildout configuration in the configuration.cfg file and then run:
+# 
+# bin/buildout
 #
