fix js errore updating kss.core

--- a/sources.cfg
+++ b/sources.cfg
@@ -20,6 +20,7 @@ auto-checkout =
 #    redomino.protectdelete
     Products.PloneFormGen
     Products.ContentWellPortlets
+    kss.core
 
 [sources]
 #redomino.cache = git git@github.com:redomino/redomino.cache.git
@@ -41,3 +42,5 @@ auto-checkout =
 
 Products.PloneFormGen = git git://github.com/giacomos/Products.PloneFormGen.git
 Products.ContentWellPortlets = svn https://projects.redomino.com/svn/contentwellportlet/trunk/
+kss.core = svn http://svn.plone.org/svn/collective/kukit/kss.core/tag/1.6.3FTA
+
