fix to installer

--- a/sources.cfg
+++ b/sources.cfg
@@ -38,7 +38,7 @@ auto-checkout =
 #redomino.protectdelete = git https://github.com/redomino/redomino.protectdelete.git
 #ploomcake.core = git git@github.com:ploomcake/ploomcake.core.git
 #ploomcake.theme = git git@github.com:ploomcake/ploomcake.theme.git
-#ploomcake.installer = git git@github.com:ploomcake/ploomcake.installer.git
+ploomcake.installer = git git@github.com:ploomcake/ploomcake.installer.git
 
 Products.PloneFormGen = git git://github.com/giacomos/Products.PloneFormGen.git
 Products.ContentWellPortlets = svn https://projects.redomino.com/svn/contentwellportlet/trunk/
