fixed ploomcake.installer and ploomcake.core. Still working on redomino.flowsearch

--- a/project.cfg
+++ b/project.cfg
@@ -30,7 +30,7 @@ eggs +=
     redomino.css3theme
     redomino.tinymceplugins.snippet
     redomino.tokenrole
-    redomino.flowsearch
+#    redomino.flowsearch
     redomino.protectdelete
     ploomcake.core
     ploomcake.theme
@@ -42,12 +42,14 @@ develop +=
     src/Products.PloneFormGen
     src/Products.ContentWellPortlets
     src/kss.core
+    src/redomino.flowsearch
 
 # egg not released on pypi
 instance_eggs = 
     Products.PloneFormGen
     Products.ContentWellPortlets
     kss.core
+    redomino.flowsearch
 
 instance_zcml =
     ploomcake.installer-overrides
