--- a/sources.cfg
+++ b/sources.cfg
@@ -10,7 +10,7 @@ auto-checkout =
 #    googlesitemap.common
 #    redomino.advancedkeyword
 #    redomino.tokenrole
-#    redomino.flowsearch
+    redomino.flowsearch
 #    redomino.tabsandslides
 #    redomino.contentwellportlets
 #    collective.quickupload
@@ -31,14 +31,14 @@ auto-checkout =
 #googlesitemap.common = git git@github.com:redomino/googlesitemap.common.git
 #redomino.advancedkeyword = git https://github.com/redomino/redomino.advancedkeyword.git
 #redomino.tokenrole = git git@github.com:redomino/redomino.tokenrole.git
-#redomino.flowsearch = git git@github.com:redomino/redomino.flowsearch.git
+redomino.flowsearch = git git@github.com:redomino/redomino.flowsearch.git
 #redomino.tabsandslides = git git@github.com:redomino/redomino.tabsandslides.git
 #redomino.contentwellportlets = git https://github.com/redomino/redomino.contentwellportlets.git
 #collective.quickupload = git git://github.com/redomino/collective.quickupload.git
 #redomino.protectdelete = git https://github.com/redomino/redomino.protectdelete.git
 #ploomcake.core = git git@github.com:ploomcake/ploomcake.core.git
 #ploomcake.theme = git git@github.com:ploomcake/ploomcake.theme.git
-ploomcake.installer = git git@github.com:ploomcake/ploomcake.installer.git
+#ploomcake.installer = git git@github.com:ploomcake/ploomcake.installer.git
 
 Products.PloneFormGen = git git://github.com/giacomos/Products.PloneFormGen.git
 Products.ContentWellPortlets = svn https://projects.redomino.com/svn/contentwellportlet/trunk/
