--- a/versions.cfg
+++ b/versions.cfg
@@ -23,15 +23,15 @@ redomino.advancedkeyword = 1.3
 redomino.breadcrumbsbrain = 0.4
 redomino.cache = 0.1
 redomino.css3theme = 1.5.8
-redomino.flowsearch = 0.12
+#redomino.flowsearch = 0.12
 redomino.seosupport = 1.1
 redomino.tabsandslides = 0.8.4
 redomino.tinymceplugins.snippet = 0.0.4
 redomino.tokenrole = 0.8
 redomino.protectdelete = 0.3
-ploomcake.core = 1.6
+ploomcake.core = 1.7
 ploomcake.theme = 1.8
-ploomcake.installer = 0.10
+ploomcake.installer = 0.11
 skimpyGimpy = 1.4
 teamrubber.pdberrorlog = 1.1
 teamrubber.theoracle = 1.0
