fix flowsearch for ie9

--- a/sources.cfg
+++ b/sources.cfg
@@ -10,7 +10,7 @@ auto-checkout =
 #    googlesitemap.common
 #    redomino.advancedkeyword
 #    redomino.tokenrole
-    redomino.flowsearch
+#    redomino.flowsearch
 #    redomino.tabsandslides
 #    redomino.contentwellportlets
 #    collective.quickupload
@@ -31,7 +31,7 @@ auto-checkout =
 #googlesitemap.common = git git@github.com:redomino/googlesitemap.common.git
 #redomino.advancedkeyword = git https://github.com/redomino/redomino.advancedkeyword.git
 #redomino.tokenrole = git git@github.com:redomino/redomino.tokenrole.git
-redomino.flowsearch = git git@github.com:redomino/redomino.flowsearch.git
+#redomino.flowsearch = git git@github.com:redomino/redomino.flowsearch.git
 #redomino.tabsandslides = git git@github.com:redomino/redomino.tabsandslides.git
 #redomino.contentwellportlets = git https://github.com/redomino/redomino.contentwellportlets.git
 #collective.quickupload = git git://github.com/redomino/collective.quickupload.git
