--- a/project.cfg
+++ b/project.cfg
@@ -4,11 +4,11 @@ extends =
     ../configuration.cfg
     versions.cfg
     sources.cfg
+    export.cfg
 
 extensions =
     buildout.dumppickedversions
     mr.developer
-
 
 # Only for products released on pypi
 eggs +=
@@ -66,26 +66,4 @@ urls +=
 packages-under-test += 
 
 
-[export]
-# This is used for import export only
-# For options see http://pypi.python.org/pypi/collective.recipe.backup
-recipe = collective.recipe.backup
-#location = ${buildout:directory}/var/exports
-snapshotlocation = ${buildout:directory}/var/export/snapshot
-blobsnapshotlocation = ${buildout:directory}/var/export/snapshot-blobs
-full = true
-keep = 1
-enable_snapshotrestore = true
-
-[exportscript]
-recipe = collective.recipe.template
-input = ${buildout:directory}/config.d/templates/syncinstance
-output = ${buildout:directory}/bin/syncinstance
-
-restore-command = bin/export-snapshotrestore
-snapshot-command = bin/export-snapshot
-
-snapshot-dir = var/export
-
-mode = 755
 
