new syncdb script

--- a/start_devel.cfg
+++ b/start_devel.cfg
@@ -2,15 +2,7 @@
 
 extends =
     config.d/devel.cfg
-
-[resetownership]
-recipe = plone.recipe.command
-command =
-    echo 'reset ownership of src and eggs (useful to compile .mo)'
-    chown -R ${buildout:effective-user}:${buildout:effective-user} '${buildout:directory}/src'
-    chown -R ${buildout:effective-user}:${buildout:effective-user} '${buildout:eggs-directory}'
-update-command = ${resetownership:command}
-
+    config.d/unixonly.cfg
 
 ##############
 # WARNING !!!! 
