new tabsandslides version, removed custom ploneformgen

--- a/project.cfg
+++ b/project.cfg
@@ -13,6 +13,7 @@ extensions =
 eggs +=
 # decomment this if you are interested in ldap support
 #    Products.PloneLDAP
+    Products.PloneFormGen
     Products.LinguaPlone
     collective.captcha
     collective.quickupload
@@ -37,13 +38,13 @@ eggs +=
 
 # Only for products not released on pypi (src/*)
 develop +=
-    src/Products.PloneFormGen
     src/Products.ContentWellPortlets
+    src/redomino.extraportlets
 
 # egg not released on pypi
 instance_eggs = 
-    Products.PloneFormGen
     Products.ContentWellPortlets
+    redomino.extraportlets
 
 instance_zcml =
     ploomcake.installer-overrides
