--- a/sources.cfg
+++ b/sources.cfg
@@ -18,7 +18,7 @@ auto-checkout =
 #    ploomcake.theme
 #    ploomcake.installer
 #    redomino.protectdelete
-    Products.PloneFormGen
+    redomino.extraportlets
     Products.ContentWellPortlets
 
 [sources]
@@ -38,7 +38,7 @@ auto-checkout =
 #ploomcake.core = git git@github.com:ploomcake/ploomcake.core.git
 #ploomcake.theme = git git@github.com:ploomcake/ploomcake.theme.git
 #ploomcake.installer = git git@github.com:ploomcake/ploomcake.installer.git
+redomino.extraportlets = git git@github.com:redomino/redomino.extraportlets.git
 
-Products.PloneFormGen = git git://github.com/giacomos/Products.PloneFormGen.git
 Products.ContentWellPortlets = svn https://projects.redomino.com/svn/contentwellportlet/trunk/
 
