updated with plone 4.2.4

--- a/sources.cfg
+++ b/sources.cfg
@@ -18,8 +18,7 @@ auto-checkout =
 #    ploomcake.theme
 #    ploomcake.installer
 #    redomino.protectdelete
-    redomino.extraportlets
-    Products.ContentWellPortlets
+    redomino.redirectparent
 
 [sources]
 #redomino.cache = git git@github.com:redomino/redomino.cache.git
@@ -38,7 +37,6 @@ auto-checkout =
 #ploomcake.core = git git@github.com:ploomcake/ploomcake.core.git
 #ploomcake.theme = git git@github.com:ploomcake/ploomcake.theme.git
 #ploomcake.installer = git git@github.com:ploomcake/ploomcake.installer.git
-redomino.extraportlets = git git@github.com:redomino/redomino.extraportlets.git
+redomino.redirectparent = svn https://projects.redomino.com/svn/recatalog/redomino.recatalog/modules/redomino.redirectparent/trunk
 
-Products.ContentWellPortlets = svn https://projects.redomino.com/svn/contentwellportlet/trunk/
 
