--- a/versions.cfg
+++ b/versions.cfg
@@ -1,40 +1,23 @@
 [versions]
-Mako = 0.7.3
-MarkupSafe = 0.15
-Products.LinguaPlone = 4.1.2
-Products.PythonField = 1.1.3
-Products.TALESField = 1.1.3
-Products.TemplateFields = 1.2.5
-Sphinx = 1.1.3
-sphinx = 1.1.3
-ZopeHealthWatcher = 0.3
-collective.captcha = 1.7
-collective.js.jqueryui = 1.9.2.0
+
+Products.LinguaPlone = 4.1.3
+Products.ContentWellPortlets = 4.2.0
 collective.portlet.actions = 1.2.2
 collective.portlet.embed = 1.1
-collective.quickupload = 1.5.6
-collective.recipe.template = 1.9
-skimpyGimpy = 1.4
-teamrubber.pdberrorlog = 1.1
-teamrubber.theoracle = 1.0
-threadframe = 0.2
-z3c.jbot = 0.7.1
-zest.releaser = 3.41
-zope.testrecorder = 0.4
-zope.testrunner = 4.0.4
-zptlint = 0.2.4
+collective.quickupload = 1.5.8
+
 
 googlesitemap.common = 1.3
-i18ndude = 3.2.2
+
 plone.formwidget.captcha = 1.0.1
-pyflakes = 0.5.0
+
 redomino.advancedkeyword = 1.3
 redomino.breadcrumbsbrain = 0.4
 redomino.cache = 0.1
 redomino.css3theme = 1.5.10
 redomino.flowsearch = 0.13
 redomino.seosupport = 1.1
-redomino.tabsandslides = 0.9.9
+redomino.tabsandslides = 0.9.10
 redomino.tinymceplugins.snippet = 0.0.4
 redomino.tokenrole = 0.8
 redomino.protectdelete = 0.3
@@ -42,4 +25,47 @@ ploomcake.core = 1.7
 ploomcake.theme = 1.8
 ploomcake.installer = 0.11
 
+MarkupSafe = 0.15
+Products.PloneFormGen = 1.7.6
+Products.PythonField = 1.1.3
+Products.TALESField = 1.1.3
+Products.TemplateFields = 1.2.5
+Sphinx = 1.1.3
+ZopeHealthWatcher = 0.3
+collective.captcha = 1.7
+collective.perseo = 0.6.4
+collective.recipe.template = 1.9
+i18ndude = 3.2.2
+pyflakes = 0.6.1
+teamrubber.pdberrorlog = 1.1
+teamrubber.theoracle = 1.0
+zest.releaser = 3.43
+zope.testrecorder = 0.4
+zptlint = 0.2.4
+
+#Required by:
+#ZopeHealthWatcher 0.3
+Mako = 0.7.3
+
+#Required by:
+#collective.perseo 0.6.4
+#Products.PloneFormGen 1.7.6
+collective.js.jqueryui = 1.10.0.1
+
+#Required by:
+#plone.formwidget.captcha 1.0.1
+#collective.captcha 1.7
+skimpyGimpy = 1.4
+
+#Required by:
+#ZopeHealthWatcher 0.3
+threadframe = 0.2
+
+#Required by:
+#redomino.advancedkeyword 1.3
+z3c.jbot = 0.7.1
+
+#Required by:
+#collective.xmltestreport 1.2.2
+zope.testrunner = 4.0.4
 
