--- a/project.cfg
+++ b/project.cfg
@@ -13,6 +13,7 @@ extensions =
 eggs +=
 # decomment this if you are interested in ldap support
 #    Products.PloneLDAP
+    Products.ContentWellPortlets
     Products.PloneFormGen
     Products.LinguaPlone
     collective.captcha
@@ -34,17 +35,15 @@ eggs +=
     ploomcake.core
     ploomcake.theme
     ploomcake.installer
-    Products.PloneHotfix20121106==1.2
+    collective.perseo
 
 # Only for products not released on pypi (src/*)
 develop +=
-    src/Products.ContentWellPortlets
-    src/redomino.extraportlets
+    src/redomino.redirectparent
 
 # egg not released on pypi
 instance_eggs = 
-    Products.ContentWellPortlets
-    redomino.extraportlets
+    redomino.redirectparent
 
 instance_zcml =
     ploomcake.installer-overrides
