--- a/versions.cfg
+++ b/versions.cfg
@@ -1,5 +1,6 @@
 [versions]
 
+Sphinx = 1.1.3
 Products.LinguaPlone = 4.1.3
 Products.ContentWellPortlets = 4.2.0
 collective.portlet.actions = 1.2.2
@@ -68,4 +69,11 @@ z3c.jbot = 0.7.1
 #Required by:
 #collective.xmltestreport 1.2.2
 zope.testrunner = 4.0.4
+
+#LDAP
+Products.LDAPMultiPlugins = 1.14
+Products.LDAPUserFolder = 2.24
+Products.PloneLDAP = 1.2
+dataflake.fakeldap = 1.1
+python-ldap = 2.4.10
 
