updated to new releases

--- a/project.cfg
+++ b/project.cfg
@@ -32,18 +32,24 @@ eggs +=
     redomino.tokenrole
     redomino.flowsearch
     redomino.protectdelete
-    ploomcake.core
-    ploomcake.theme
+#    ploomcake.core
+#    ploomcake.theme
     ploomcake.installer
     collective.perseo
 
 # Only for products not released on pypi (src/*)
 develop +=
     src/redomino.redirectparent
+    src/ploomcake.core
+    src/ploomcake.theme
+#    src/ploomcake.vanilla
 
 # egg not released on pypi
 instance_eggs = 
     redomino.redirectparent
+    ploomcake.core
+    ploomcake.theme
+#    ploomcake.vanilla
 
 instance_zcml =
     ploomcake.installer-overrides
