--- a/sources.cfg
+++ b/sources.cfg
@@ -14,8 +14,8 @@ auto-checkout =
 #    redomino.tabsandslides
 #    redomino.contentwellportlets
 #    collective.quickupload
-#    ploomcake.core
-#    ploomcake.theme
+    ploomcake.core
+    ploomcake.theme
 #    ploomcake.installer
 #    redomino.protectdelete
     redomino.redirectparent
@@ -34,8 +34,8 @@ auto-checkout =
 #redomino.contentwellportlets = git https://github.com/redomino/redomino.contentwellportlets.git
 #collective.quickupload = git git://github.com/redomino/collective.quickupload.git
 #redomino.protectdelete = git https://github.com/redomino/redomino.protectdelete.git
-#ploomcake.core = git git@github.com:ploomcake/ploomcake.core.git
-#ploomcake.theme = git git@github.com:ploomcake/ploomcake.theme.git
+ploomcake.core = git git@github.com:ploomcake/ploomcake.core.git
+ploomcake.theme = git git@github.com:ploomcake/ploomcake.theme.git
 #ploomcake.installer = git git@github.com:ploomcake/ploomcake.installer.git
 redomino.redirectparent = svn https://projects.redomino.com/svn/recatalog/redomino.recatalog/modules/redomino.redirectparent/trunk
 
