--- a/versions.cfg
+++ b/versions.cfg
@@ -22,8 +22,8 @@ redomino.tabsandslides = 0.9.10
 redomino.tinymceplugins.snippet = 0.0.4
 redomino.tokenrole = 0.8
 redomino.protectdelete = 0.3
-ploomcake.core = 1.7
-ploomcake.theme = 1.8
+#ploomcake.core = 1.7
+#ploomcake.theme = 1.8
 ploomcake.installer = 0.11
 
 MarkupSafe = 0.15
