new contentwellportlet release, ploomcake.vanilla

--- a/project.cfg
+++ b/project.cfg
@@ -42,14 +42,14 @@ develop +=
     src/redomino.redirectparent
     src/ploomcake.core
     src/ploomcake.theme
-#    src/ploomcake.vanilla
+    src/ploomcake.vanilla
 
 # egg not released on pypi
 instance_eggs = 
     redomino.redirectparent
     ploomcake.core
     ploomcake.theme
-#    ploomcake.vanilla
+    ploomcake.vanilla
 
 instance_zcml =
     ploomcake.installer-overrides
