--- a/sources.cfg
+++ b/sources.cfg
@@ -16,6 +16,7 @@ auto-checkout =
 #    collective.quickupload
     ploomcake.core
     ploomcake.theme
+    ploomcake.vanilla
 #    ploomcake.installer
 #    redomino.protectdelete
     redomino.redirectparent
@@ -38,5 +39,6 @@ ploomcake.core = git git@github.com:ploomcake/ploomcake.core.git
 ploomcake.theme = git git@github.com:ploomcake/ploomcake.theme.git
 #ploomcake.installer = git git@github.com:ploomcake/ploomcake.installer.git
 redomino.redirectparent = svn https://projects.redomino.com/svn/recatalog/redomino.recatalog/modules/redomino.redirectparent/trunk
+ploomcake.vanilla = git git@github.com:ploomcake/ploomcake.vanilla.git
 
 
