--- a/versions.cfg
+++ b/versions.cfg
@@ -1,12 +1,10 @@
 [versions]
-
 Sphinx = 1.1.3
 Products.LinguaPlone = 4.1.3
-Products.ContentWellPortlets = 4.2.0
+Products.ContentWellPortlets = 4.2.1
 collective.portlet.actions = 1.2.2
 collective.portlet.embed = 1.1
 collective.quickupload = 1.5.8
-
 
 googlesitemap.common = 1.3
 
@@ -18,7 +16,7 @@ redomino.cache = 0.1
 redomino.css3theme = 1.5.10
 redomino.flowsearch = 0.13
 redomino.seosupport = 1.1
-redomino.tabsandslides = 0.9.10
+redomino.tabsandslides = 0.9.11
 redomino.tinymceplugins.snippet = 0.0.4
 redomino.tokenrole = 0.8
 redomino.protectdelete = 0.3
@@ -43,6 +41,9 @@ teamrubber.theoracle = 1.0
 zest.releaser = 3.43
 zope.testrecorder = 0.4
 zptlint = 0.2.4
+
+Sphinx = 1.1.3
+plone.app.themingplugins = 1.0b1
 
 #Required by:
 #ZopeHealthWatcher 0.3
@@ -76,4 +77,5 @@ Products.LDAPUserFolder = 2.24
 Products.PloneLDAP = 1.2
 dataflake.fakeldap = 1.1
 python-ldap = 2.4.10
+
 
