back to upstream releases (PFG contentwellportlets)

--- a/sources.cfg
+++ b/sources.cfg
@@ -18,8 +18,8 @@ auto-checkout =
 #    ploomcake.theme
 #    ploomcake.installer
 #    redomino.protectdelete
-    Products.PloneFormGen
-    Products.ContentWellPortlets
+#    Products.PloneFormGen
+#    Products.ContentWellPortlets
     kss.core
 
 [sources]
@@ -40,7 +40,7 @@ auto-checkout =
 #ploomcake.theme = git git@github.com:ploomcake/ploomcake.theme.git
 #ploomcake.installer = git git@github.com:ploomcake/ploomcake.installer.git
 
-Products.PloneFormGen = git git://github.com/giacomos/Products.PloneFormGen.git
-Products.ContentWellPortlets = svn https://projects.redomino.com/svn/contentwellportlet/trunk/
+#Products.PloneFormGen = git git://github.com/giacomos/Products.PloneFormGen.git
+#Products.ContentWellPortlets = svn https://projects.redomino.com/svn/contentwellportlet/trunk/
 kss.core = svn http://svn.plone.org/svn/collective/kukit/kss.core/tag/1.6.3FTA
 
