--- a/versions.cfg
+++ b/versions.cfg
@@ -41,6 +41,8 @@ zest.releaser = 3.37
 zope.testrecorder = 0.4
 zope.testrunner = 4.0.4
 zptlint = 0.2.4
+Products.PloneFormGen = 1.7.11
+Products.ContentWellPortlets = 4.2.1
 
 #fix kss.core (to remove for plone 4.2)
 kss.core = 1.6.3FTA
