--- a/sources.cfg
+++ b/sources.cfg
@@ -14,12 +14,12 @@ auto-checkout =
 #    redomino.tabsandslides
 #    redomino.contentwellportlets
 #    collective.quickupload
+#    ploomcake.installer
+#    redomino.protectdelete
+#    redomino.redirectparent
     ploomcake.core
     ploomcake.theme
     ploomcake.vanilla
-#    ploomcake.installer
-#    redomino.protectdelete
-    redomino.redirectparent
 
 [sources]
 #redomino.cache = git git@github.com:redomino/redomino.cache.git
@@ -35,10 +35,10 @@ auto-checkout =
 #redomino.contentwellportlets = git https://github.com/redomino/redomino.contentwellportlets.git
 #collective.quickupload = git git://github.com/redomino/collective.quickupload.git
 #redomino.protectdelete = git https://github.com/redomino/redomino.protectdelete.git
+#ploomcake.installer = git git@github.com:ploomcake/ploomcake.installer.git
+#redomino.redirectparent = git git@github.com:redomino/redomino.redirectparent.git
 ploomcake.core = git git@github.com:ploomcake/ploomcake.core.git
 ploomcake.theme = git git@github.com:ploomcake/ploomcake.theme.git
-#ploomcake.installer = git git@github.com:ploomcake/ploomcake.installer.git
-redomino.redirectparent = svn https://projects.redomino.com/svn/recatalog/redomino.recatalog/modules/redomino.redirectparent/trunk
 ploomcake.vanilla = git git@github.com:ploomcake/ploomcake.vanilla.git
 
 
