--- a/versions.cfg
+++ b/versions.cfg
@@ -10,7 +10,7 @@ googlesitemap.common = 1.3
 
 plone.formwidget.captcha = 1.0.1
 
-redomino.advancedkeyword = 1.3
+redomino.advancedkeyword = 1.4
 redomino.breadcrumbsbrain = 0.4
 redomino.cache = 0.1
 redomino.css3theme = 1.5.10
@@ -23,9 +23,10 @@ redomino.protectdelete = 0.3
 #ploomcake.core = 1.7
 #ploomcake.theme = 1.8
 ploomcake.installer = 0.11
+redomino.redirectparent = 0.3
 
 MarkupSafe = 0.15
-Products.PloneFormGen = 1.7.6
+Products.PloneFormGen = 1.7.12
 Products.PythonField = 1.1.3
 Products.TALESField = 1.1.3
 Products.TemplateFields = 1.2.5
