fixes for plone 4.3

--- a/project.cfg
+++ b/project.cfg
@@ -32,34 +32,30 @@ eggs +=
     redomino.tokenrole
     redomino.flowsearch
     redomino.protectdelete
-#    ploomcake.core
-#    ploomcake.theme
     redomino.redirectparent
     ploomcake.installer
     collective.perseo
+    ploomcake.core
+    ploomcake.theme
+    ploomcake.vanilla
 
 # Only for products not released on pypi (src/*)
 develop +=
     src/ploomcake.core
     src/ploomcake.theme
+    src/redomino.css3theme
     src/ploomcake.vanilla
-
-# egg not released on pypi
-instance_eggs = 
-    ploomcake.core
-    ploomcake.theme
-    ploomcake.vanilla
 
 instance_zcml =
     ploomcake.installer-overrides
 
 [instance]
 zcml += ${buildout:instance_zcml}
-eggs += ${buildout:instance_eggs}
+eggs += ${buildout:eggs}
 
 [client1]
 zcml += ${buildout:instance_zcml}
-eggs += ${buildout:instance_eggs}
+eggs += ${buildout:eggs}
     
 [productdistros]
 urls +=
