--- a/sources.cfg
+++ b/sources.cfg
@@ -3,7 +3,7 @@
 sources = sources
 auto-checkout =
 #    redomino.cache
-#    redomino.css3theme
+    redomino.css3theme
 #    redomino.tinymceplugins.snippet
 #    redomino.breadcrumbsbrain
 #    redomino.seosupport
@@ -23,7 +23,7 @@ auto-checkout =
 
 [sources]
 #redomino.cache = git git@github.com:redomino/redomino.cache.git
-#redomino.css3theme = git git@github.com:redomino/redomino.css3theme.git
+redomino.css3theme = git git@github.com:redomino/redomino.css3theme.git
 #redomino.tinymceplugins.snippet = git git@github.com:redomino/redomino.tinymceplugins.snippet.git
 #redomino.breadcrumbsbrain = git git@github.com:redomino/redomino.breadcrumbsbrain.git
 #redomino.seosupport = git git@github.com:redomino/redomino.seosupport.git
